# gr-dwf-analog-discovery-2-community-project

./: LICENSE  README.md
gr-dwf_analog_discovery_2_community_module/: CMakeLists.txt  MANIFEST.md
gr-dwf_analog_discovery_2_community_module/cmake/Modules/: dwf_analog_discovery_2_community_moduleConfig.cmake
gr-dwf_analog_discovery_2_community_module/docs/: README.dwf_analog_discovery_2_community_module
gr-dwf_analog_discovery_2_community_module/docs/doxygen/: Doxyfile.in
gr-dwf_analog_discovery_2_community_module/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-dwf_analog_discovery_2_community_module/include/dwf_analog_discovery_2_community_module/: CMakeLists.txt  api.h
gr-dwf_analog_discovery_2_community_module/lib/: CMakeLists.txt  qa_dwf_analog_discovery_2_community_module.cc  qa_dwf_analog_discovery_2_community_module.h  test_dwf_analog_discovery_2_community_module.cc
gr-dwf_analog_discovery_2_community_module/python/: CMakeLists.txt  __init__.py
gr-dwf_analog_discovery_2_community_module/swig/: CMakeLists.txt  dwf_analog_discovery_2_community_module_swig.i
